# Paper-Analyst_With_Streamlit

./: .gitignore  CHANGELOG.md  README.md  START.bat  install.bat  pyproject.toml  requirements.txt  sample_of_analyst-env.txt
src/paper_analyst/: config.py  document_loader.py  main.py  prompts.yaml  run.py
